# uSAP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  graph.cpp  main.cpp
Dataset/: README.md
Dataset/static/lowOverlap_lowBlockSizeVar/: convert.py  static_lowOverlap_lowBlockSizeVar_1000_nodes.tsv  static_lowOverlap_lowBlockSizeVar_1000_nodes_truePartition.tsv  static_lowOverlap_lowBlockSizeVar_20000_nodes_truePartition.tsv  static_lowOverlap_lowBlockSizeVar_50000_nodes_truePartition.tsv  static_lowOverlap_lowBlockSizeVar_5000_nodes.tsv  static_lowOverlap_lowBlockSizeVar_5000_nodes_truePartition.tsv  test.tsv
include/: compute.hpp  evaluate.hpp  graph.cpp  graph.cu  graph.hpp  graph_matrix.hpp  graph_parallel.h  graph_parallel.hpp  graph_parallel_back.hpp  graph_parallel_list.hpp  graph_parallel_matrix.hpp  graph_parallel_tf.hpp  graph_parallel_unordered_map.hpp  init.hpp  km.hpp  move.hpp  propose.hpp  test1.cu  utils.hpp
python/: partition_baseline_main.py  partition_baseline_support.py
